Wider images as much as possible to keep within 8 pages.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8881 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -649,7 +649,7 @@ MFNode [] \codeem{effects} [] # Effect
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=2.5in]{fancy_light_spot_shape-cropped}
+  \includegraphics[width=2.9in]{fancy_light_spot_shape-cropped}
   \caption{Textured spot light with shadow.}
   \label{fig_fancy_spot}
 \end{figure}
@@ -964,7 +964,7 @@ animated effects.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=2in]{terrain}
+  \includegraphics[width=2.3in]{terrain}
   \caption{ElevationGrid with 3 textures mixed inside the shader.}
   \label{fig_terrain}
 %%based on the point height.}
@@ -978,7 +978,7 @@ may be implemented on GPU by a simple prototype using the \texttt{ShaderTexture}
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=2.2in]{noise-cropped}
+  \includegraphics[width=2.3in]{noise-cropped}
   \caption{3D and 2D smooth noise on GPU, wrapped in a ShaderTexture.}
   \label{fig_noise}
 \end{figure}
@@ -1038,7 +1038,7 @@ See figure \ref{fig_flowers}.
 \setcounter{figure}{8}
 \begin{figure}[H]
   \centering
-  \includegraphics[width=2in]{flowers}
+  \includegraphics[width=2.7in]{flowers-cropped}
   \caption{Flowers bending under the wind, transformed on GPU in object space.}
   \label{fig_flowers}
 \end{figure}
