Shorten mention of example models in tex, to just a link to http://vrmlengine.sourceforge.net/compositing_shaders.php.
And add a lot of detailed text and description to compositing_shaders.php.

git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8884 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -1062,12 +1062,13 @@ that affect the given shape. And all the information is nicely integrated
 with X3D nodes, effects are specified at suitable nodes, and their
 uniform values and attributes are integrated with X3D fields.
 
+\needspace{1in}
 Many complete example models using our effects
-are available inside our engine demo models on
-\URL{http://vrmlengine.sourceforge.net/demo_models.php}.
-The relevant demos are mostly inside the \texttt{compositing\_shaders}
-subdirectory, also the \texttt{water} subdirectory contains
-the mentioned water effects.
+are referenced from our page on
+\URL{http://vrmlengine.sourceforge.net/compositing_shaders.php}.
+%% The relevant demos are mostly inside the \texttt{compositing\_shaders}
+%% subdirectory, also the \texttt{water} subdirectory contains
+%% the mentioned water effects.
 You can open these examples using any of our engine tools,
 like \texttt{view3dscene}.
 
