Fix "its programming language".
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8885 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -273,7 +273,7 @@ methods. However, this is a solution closely coupled with C++. It's
 suitable if we have a 3D engine in C++, and we want to use it in
 our own C++ program and extend its shaders. Our solution is simpler,
 treating shader effects as part of the 3D content, and can
-be integrated into a renderer regardless of it's programming language.
+be integrated into a renderer regardless of its programming language.
 Invoking a compiler to generate a
 final GPU shader, not to mention forcing users to learn C++, is out of the
 question.
