Correct paper id.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8887 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -61,7 +61,7 @@
 
 \title{Compositing Shaders in X3D}
 
-\author{1} % TODO: submission id
+\author{paper1013} % TODO: submission id
 %\author[M. Kamburelis]{M. Kamburelis$^{1}$\\
 %  $^1$Institute of Computer Science, University of Wroc{\l}aw, Poland}
 %\author{(Author identification removed.)\thanks{e-mail: xxx@xxx.xxx}\\Xxx\\Xxx}
