--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -156,7 +156,7 @@ The \textit{light\_color} function may be replaced to use different
 lighting models.
 % (Phong, Ward, Cook-Torrance and so on).
 Sometimes it makes sense to change these functions
-for all the light sources, and sometimes only a specific light source
+for all the light sources and sometimes only a specific light source
 should behave differently.
 Our approach allows you to do everything mentioned here.
 %% by inserting a piece
@@ -186,9 +186,7 @@ shaders. This makes shader programs:
 \item Much easier to create. We can jump straight into the implementation
   of our imagined algorithm in the shader.
   We are only interested in modifying the relevant shader calculation
-  parameter, and
-  %don't need to care about the rest of the shader.
-  we can completely ignore other parts of the shader.
+  parameter. We do not need to care about the rest of the shader.
 
 \item Much more powerful. Our effect
   immediately cooperates with absolutely every normal feature of X3D rendering.
@@ -224,8 +222,8 @@ Although it doesn't offer any way of compositing shader effects,
 %the point of this component
 %is to expose functionality that maps straightforward to graphic APIs like OpenGL.
 this component is still an important base for our work. It defines
-how to comfortably keep shader code inside X3D nodes, and how to pass uniform
-values (including textures) to the shaders.
+how to comfortably keep shader code inside X3D nodes. It also shows
+how to pass uniform values (including textures) to the shaders.
 
 An oldest solution to combining effects, used even before the shading languages,
 is a multi-pass rendering. Each rendering pass adds or multiplies
@@ -240,7 +238,7 @@ Arranging shader functions in a pipeline has similar disadvantages
 as multi-pass rendering, except there's no speed penalty in this case.
 
 Common approach for writing a flexible shader code is to create
-a library of functions, and allow the author to choose and compose them
+a library of functions and allow the author to choose and compose them
 in a final shader to achieve the desired look. But this approach is very limited,
 as it doesn't allow to modify a particular calculation part without
 replicating the algorithm outside of this calculation.
@@ -270,9 +268,9 @@ shader code (that usually executes on GPU). We can use
 object-oriented concepts to create a general shader that can
 later be extended, for example by overriding virtual
 methods. However, this is a solution closely coupled with C++. It's
-suitable if we have a 3D engine in C++, and we want to use it in
+suitable if we have a 3D engine in C++, we want to use it in
 our own C++ program and extend its shaders. Our solution is simpler,
-treating shader effects as part of the 3D content, and can
+treating shader effects as part of the 3D content and can
 be integrated into a renderer regardless of its programming language.
 Invoking a compiler to generate a
 final GPU shader, not to mention forcing users to learn C++, is out of the
@@ -283,16 +281,16 @@ for adding shader extensions (see \cite{ogre:shader}). Its idea is similar
 to our system (enhance the built-in shaders with our own effects),
 however the whole job of combining a shader is done by operating
 on particular shader by C++ code. The developer has to code
-the logic deciding which shaders are extended, and most of the specification
+the logic deciding which shaders are extended and most of the specification
 about how the extension is called is done in the C++ code.
 This has the nice advantage of being able to encapsulate some fixed-function
 features as well, however the whole system must be carefully controlled by
 the C++ code. In our approach, we allow the authors to write direct shading
-language code quickly, and the integration is built inside appropriate X3D nodes.
+language code quickly and the integration is built inside appropriate X3D nodes.
 
 AnySL \cite{anysl} allows to integrate renderer
 shaders with user shaders. We strive to do something more (allow effortless
-integration between various user shaders too), and simpler (without
+integration between various user shaders too) and simpler (without
 introducing any new shading language). On the other hand,
 we do not hide the differences between various shading languages.
 User effects have to be implemented in the same GPU shading language
@@ -318,11 +316,11 @@ This creates a system where it's trivially easy to define a hook,
 and to use a hook.
 Many modules can implement the same hook and cooperate without any problems.
 %% The whole hook system is defined completely in PHP, as it's a scripting
-%% language, and we can query the list of loaded functions by name,
+%% language and we can query the list of loaded functions by name,
 %% and call function by its name.
 Drupal approach is quite similar to our
 core idea of combining effects. Our effects are similar to
-Drupal's modules, and our ,,plugging points'' are analogous to Drupal hooks.
+Drupal's modules and our ,,plugging points'' are analogous to Drupal hooks.
 
 %% Our effects can define functions with special names to enhance
 %% the standard shader behavior, just like Drupal modules can define functions
@@ -358,7 +356,7 @@ Drupal's modules, and our ,,plugging points'' are analogous to Drupal hooks.
 The core idea of our approach is that the base shader code defines
 points where calls to user-defined functions may be inserted. We call
 these places \textit{plugs}, as they act like sockets where logic
-may be added. Each plug has a name, and a given set of parameters.
+may be added. Each plug has a name and a given set of parameters.
 The effects can use special function names, starting with \texttt{PLUG\_}
 and followed by the plug name. These declarations will be found,
 and the renderer will insert appropriate calls to them from the base shader.
@@ -388,7 +386,7 @@ within an \texttt{EffectPart} node. The call to this function will
 be automatically inserted at the \texttt{texture\_apply} plug point in
 the renderer internal shader. This particular plug,
 the \texttt{PLUG\_texture\_apply}, is called after the normal texture colors
-are applied, but before the alpha test, and is a usual place to ,,just modify the pixel color''.
+are applied, but before the alpha test and is a usual place to ,,just modify the pixel color''.
 \texttt{fragment\_color} is an \texttt{inout} parameter, by modifying it
 we modify the color that will be displayed on the screen.
 
@@ -396,8 +394,8 @@ We have a reference of all the plugging points available in our implementation
 on \URL{http://vrmlengine.sourceforge.net/compositing_shaders.php}.
 For each plugging point,
 like this \texttt{PLUG\_texture\_apply}, we define a list of parameters
-(they have to be declared exactly the same in an effect), and we define
-when it is called.
+%(they have to be declared exactly the same in an effect),
+and when it is called.
 
 \needspace{1in}
 Many usage scenarios are possible:
@@ -411,7 +409,7 @@ It allows the authors to extend or override a particular shading parameter.
 \item The \texttt{Effect} nodes may also use the plug names defined
 in the previous \texttt{Effect} nodes on the same shape.
 It is trivially easy (you just add a ,,magic'' comment) to define
-plugging points in your own shader code, and this way your own effects
+plugging points in your own shader code. This way your own effects
 can be customized.
 
 \item Inside the renderer implementation, the same approach can be used
@@ -550,7 +548,7 @@ the plug function, one part defines the function body and so on).
 Both approaches seemed uncomfortable and not natural for authors,
 and they didn't really offer much simpler implementation, so we dropped this idea.
 The current approach, to find the declarations of \texttt{PLUG\_xxx} functions
-inside a complete shader code, is easy to implement, and results in clean
+inside a complete shader code, is easy to implement and results in clean
 shader code of the effects. It also allows us to naturally use
 the separate compilation units in case of GLSL.
 
@@ -588,11 +586,11 @@ makes them cooperate correctly.
 Note that all our nodes benefit from X3D mechanism to reuse the nodes
 by reference (the \texttt{DEF} / \texttt{USE} keywords). Reusing the
 \texttt{Effect} nodes
-is most natural, and allows to combine existing effects in any desired way.
+is most natural and allows to combine existing effects in any desired way.
 Reusing the \texttt{EffectPart} nodes is also useful, when some effects
 would like to share a particular piece of code. For example,
 you can create an \texttt{EffectPart} with a library of useful
-shading language functions, and reuse if for various effects.
+shading language functions and reuse if for various effects.
 
 \begin{figure*}[t]
   \centering
@@ -617,7 +615,7 @@ like pointing device sensor nodes and \texttt{LocalFog}.
 The \texttt{LocalFog} example is worth emphasizing. Using our system,
 an X3D viewer can implement the \texttt{LocalFog} node as a prototype
 that expands to our \texttt{Effect} node. This results in a 100\% correct
-implementation of the standard \texttt{LocalFog} node, and is very easy.
+and easy implementation of the standard \texttt{LocalFog} node.
 
 As one of the demos, we have implemented a realistic
 animated volumetric fog, where the fog density is stored in
@@ -989,7 +987,7 @@ is naturally a combination of a couple effects.
 To simulate waves we want to vary vertex
 heights, or vary per-fragment normal vectors (for best results,
 we want to do both things).
-We also want to simulate the fact that water has reflections, and
+We also want to simulate the fact that water has reflections and
 is transparent. We have implemented a nice water using this approach,
 with (initially) two independent effect nodes. See figure \ref{fig_water}.
 Then we have tested two alternative
@@ -1023,7 +1021,7 @@ and what they have in common.
 %% (As for the results about which one is better: predictably, we showed
 %% that using GPU noise is slower, requires a better GPU,
 %% but also improves the quality noticeably. With GPU noise, there is no problem
-%% with aliasing of the noise texture, and the noise parameters can be adjusted
+%% with aliasing of the noise texture and the noise parameters can be adjusted
 %% in real-time.)
 
 We also have plugs to change the geometry in object space.
@@ -1049,8 +1047,8 @@ X3D \textit{Programmable shaders component} \cite{x3d:shaders}. However, such im
 would be extremely cumbersome.
 You would first have to implement all the necessary (multi-)texturing, lighting,
 shadows, and other rendering features in a shader code.
-This is a large work if we consider all the X3D rendering options, and note that
-a shader should remain optimized for a particular setting.
+This is a large work if we consider all the X3D rendering options.
+Also note that a shader should remain optimized for a particular setting.
 %% Actually, it isn't even possible, unless we can calculate some global options,
 %% like which light sources and fog nodes affect the given shape.
 The only manageable way to do this, that would work for all the lighting
@@ -1075,7 +1073,7 @@ like \texttt{view3dscene}.
 %% You can run \texttt{view3dscene} with \texttt{--debug-log-shaders} command-line
 %% option. Output will show you the final shader code generated,
 %% and also the OpenGL log after linking the shaders.
-%% %% Be sure to redirect the output to a file, and you may want to test it first
+%% %% Be sure to redirect the output to a file and you may want to test it first
 %% %% with a simple scene with one shape --- as the output may be quite large.
 %% This is a useful way to learn about our shader rendering internals.
 
@@ -1128,7 +1126,7 @@ We show a new approach for developing effects using the GPU shading languages.
 It allows to combine various shader effects with each other
 and with application internal shaders.
 Our approach is relatively easy
-to implement, and allows the authors to directly use the existing GPU shading
+to implement and allows the authors to directly use the existing GPU shading
 languages.
 We propose a number of extensions to the X3D,
 an open standard for 3D data, to make our effects available for 3D
