Reference to Spark, but unused for now: no space.
git-svn-id: https://svn.code.sf.net/p/castle-engine/code/trunk/papers@8892 afe8dcc5-9094-451b-8773-5f495042a737

--- a/compositing_shaders/compositing_shaders.bib
+++ b/compositing_shaders/compositing_shaders.bib
@@ -157,3 +157,10 @@
   address = {New York, NY, USA},
   keywords = {X3D, declarative shader, material description},
 }
+
+@inproceedings{spark,
+  author = {Foley, Tim and Hanrahan, Pat},
+  title = "{Spark: Modular, Composable Shaders for Graphics Hardware}",
+  booktitle = "{Proceedings of SIGGRAPH 2011}",
+  publisher = {ACM},
+}
