--- a/compositing_shaders/compositing_shaders.tex
+++ b/compositing_shaders/compositing_shaders.tex
@@ -297,6 +297,8 @@ of our approach is that we do not hide the differences between various shading l
 User effects have to be implemented in the same GPU shading language
 that is used by the renderer.
 
+% \cite{spark}.
+
 %% \cite{web3d2010:declarativeshader} presents a declarative approach
 %% to an advanced shader in X3D. However, it only allows a fixed set
 %% of functionality, kind od ,,advanced and exhanced material''.
